Fix icon alignment on contact page

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -333,7 +333,12 @@ it is basically free anyway. */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    text-align: center;
+}
+
+.contact-methods section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .contact-methods p,
